<resources>
    <string name="app_name">MusicLstr</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="sign_en">Sign In</string>

    <string name="sign_up">Sign Up</string>
    <string name="sinh_ap">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="sign_ni">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="show">SHOW</string>
    <string name="create_a_password">Create a password</string>
    <string name="all_songs">All Songs</string>
    <string name="song_title">Song Title Here</string>
    <string name="song_artist">Artist Name Here</string>
    <string name="playback_timer">00:00</string>
    <string name="shuffle_button">shuffle_button</string>
    <string name="next_button">next_button</string>
    <string name="pause_resume_button">pause_resume_button</string>
    <string name="previous_button">previous_button</string>
    <string name="repeat_button">repeat_button</string>
    <string name="logo_description">logo_description</string>
    <string
    <string name="playlist_button_description">playlist\n</string>


</resources>