<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo_icn" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/heading"
        android:text="@string/all_songs"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:iconifiedByDefault="true"
        android:queryHint="Search Songs"
        android:background="#000000"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toTopOf="@id/controlPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/controlPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/song_title"
                android:text="@string/song_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/song_artist"
                android:text="@string/song_artist"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Playing_Song_Cardview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            app:cardElevation="10dp"
            android:background="#00FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="20dp">


            <ImageView
                android:id="@+id/Playing_Song_Imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/positive_playback_timer"
                android:text="@string/playback_timer"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:progressBackgroundTint="@color/black" />

            <TextView
                android:id="@+id/negative_playback_timer"
                android:text="@string/playback_timer"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/repeat_button"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/repeat_button" />

            <Button
                android:id="@+id/previousButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_marginRight="20dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:contentDescription="@string/previous_button" />

            <Button
                android:id="@+id/pauseResumeButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:contentDescription="@string/pause_resume_button" />

            <Button
                android:id="@+id/nextButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_marginLeft="20dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:contentDescription="@string/next_button" />

            <Button
                android:id="@+id/shuffleButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/shuffle_button" />
        </LinearLayout>

        <com.example.musiclstr.CustomVisualizerView
            android:id="@+id/visualizerView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="120dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
